# playbot_ng

./: .gitignore  Cargo.toml  README.md  codedb_template.rs  example.config.toml  paste_template.rs  rust-toolchain  template.rs
cratesio/: Cargo.toml
cratesio/src/: lib.rs
futures_adapter/: .gitignore  Cargo.toml
futures_adapter/old_futures/: Cargo.toml
futures_adapter/src/: lib.rs
playground/: Cargo.toml
playground/src/: execute.rs  lib.rs  paste.rs  version.rs
shared_str/: Cargo.toml
shared_str/src/: lib.rs
src/: bot.rs  codedb.rs  command_registry.rs  config.rs  context.rs  cratesio.rs  main.rs  paste.rs  playground.rs
src/bot/: codedb.rs  command.rs  command_registry.rs  context.rs  crate_info.rs  egg.rs  mod.rs  playground.rs
src/module/: crate_info.rs  egg.rs  help.rs  mod.rs  playground.rs
