[package]
name = "playbot_ng"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]

[dependencies]
failure = "0.1.1"
irc = { version = "0.13.3", git = "https://github.com/aatxe/irc", branch = "develop" }
reqwest = "0.8.2"
url = "1.6.0"
serde_json = "1.0.9"
chrono = { version = "0.4.0", features = ["serde"] }
itertools = "0.7.7"
regex = "0.2.10"
lazy_static = "1.0.0"
playground = { path = "playground" }
cratesio = { path = "cratesio" }

[workspace]
