[package]
name = "playbot_ng"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]

[dependencies]
failure = "0.1.1"
irc = { version = "0.13.5", git = "https://github.com/aatxe/irc", branch = "0.14" }
reqwest = "0.8.5"
url = "1.7.0"
serde_json = "1.0.17"
chrono = { version = "0.4.2", features = ["serde"] }
itertools = "0.7.8"
regex = "1.0.0"
lazy_static = "1.0.0"
playground = { path = "playground" }
cratesio = { path = "cratesio" }

[workspace]
