[package]
name = "playbot_ng"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]

[dependencies]
failure = "0.1.1"
serenity = "0.5.4"
toml = "0.4.6"
threadpool = "1.7.1"
reqwest = "0.8.5"
url = "1.7.0"
serde_json = "1.0.17"
chrono = { version = "0.4.2", features = ["serde"] }
itertools = "0.7.8"
regex = "1.0.0"
lazy_static = "1.0.0"
playground = { path = "playground" }
cratesio = { path = "cratesio" }

[workspace]
