[package]
name = "playground"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]

[dependencies]
reqwest = { version = "0.8.5", features = ["unstable"] }
failure = "0.1.1"
serde = "1.0.36"
serde_derive = "1.0.36"
apply = "0.2.2"
futures_adapter = { path = "../futures_adapter" }

[dependencies.futures-await]
git = "https://github.com/alexcrichton/futures-await"
